--- a/.github/workflows/v13_cloud_audit.yml
+++ b/.github/workflows/v13_cloud_audit.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   audit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       
