Actions: Switch to force push to ensure data sync stability

--- a/.github/workflows/v13_cloud_audit.yml
+++ b/.github/workflows/v13_cloud_audit.yml
@@ -43,4 +43,4 @@ jobs:
           git config --global user.email "bot@v13.cloud"
           git add data/audit_result.json
           git commit -m "Update Audit Result [$(date +'%Y-%m-%d %H:%M')]" || exit 0
-          git push origin master
+          git push origin master --force
