--- a/.github/workflows/v13_cloud_audit.yml
+++ b/.github/workflows/v13_cloud_audit.yml
@@ -1,4 +1,4 @@
-name: V13 Quantum Cloud Audit
+name: V13 Quantum Cloud SOP
 
 on:
   push:
@@ -10,10 +10,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  audit:
+  operational_cycle:
     runs-on: ubuntu-latest
-    env:
-      TZ: Asia/Shanghai
     permissions:
       contents: write
     steps:
@@ -26,21 +24,21 @@ jobs:
           
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements_action.txt
           
-      - name: Run V13 Audit
+      - name: Run Global-Link SOP Cycle
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          TZ: Asia/Shanghai
         run: |
           git fetch origin master
           git reset --hard origin/master
           python main.py
         
-      - name: Commit and Push
+      - name: Data Persistence (Archive Snapshots)
         run: |
-          git config --global user.name "V13-Cloud-Bot"
-          git config --global user.email "bot@v13.cloud"
-          git add data/audit_result.json
-          git commit -m "Update Audit Result [$(date +'%Y-%m-%d %H:%M')]" || exit 0
+          git config --global user.name "V13-Archiver"
+          git config --global user.email "archive@v13.cloud"
+          git add data/raw/*.json data/processed/*.json data/audit/*.json data/audit_result.json
+          git commit -m "V13 Persistence: [$(date +'%Y-%m-%d %H:%M')]" || exit 0
           git push origin master --force
