V13 Cloud: Robust Harvester Fix - Switching to ETF-specific interfaces and adding Macro expansion

--- a/.github/workflows/v13_cloud_audit.yml
+++ b/.github/workflows/v13_cloud_audit.yml
@@ -24,6 +24,8 @@ jobs:
           
       - name: Install Dependencies
         run: |
+          pip install --upgrade pip
+          pip install --upgrade akshare
           pip install -r requirements_action.txt
           
       - name: Run Global-Link SOP Cycle
