chore: update workflow schedule to hourly (09:00-16:00 CST) on weekdays

--- a/.github/workflows/v13_cloud_audit.yml
+++ b/.github/workflows/v13_cloud_audit.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '15 1 * * 1-5'  # 09:15 CST
-    - cron: '30 5 * * 1-5'  # 13:30 CST
-    - cron: '15 7 * * 1-5'  # 15:15 CST
+    - cron: '0 1-8 * * 1-5'  # Every hour from 09:00 to 16:00 CST (Monday to Friday)
   workflow_dispatch:
 
 jobs:
